# koto-zed

./: Cargo.toml  README.md  extension.toml  extension.wasm
grammars/: koto.wasm
languages/koto/: Config.toml  brackets.scm  outline.scm
scripts/: outline.koto
src/: lib.rs
test_scripts/: outline.koto
